--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="https://www.instagram.com/ungarattifotografia/">Instagram</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="https://www.instagram.com/ungarattifotografia/">Whatsapp</a>
+                    <a class="nav-link" href="https://wa.me/5519983145314?text=Ol%C3%A1+vim+pelo+site">Whatsapp</a>
                   </li>
                 </ul>
               </div>
